add confidential compute request to api docs
